--- a/aws-lambda-java-events/pom.xml
+++ b/aws-lambda-java-events/pom.xml
@@ -1,10 +1,11 @@
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <groupId>com.amazonaws</groupId>
   <artifactId>aws-lambda-java-events</artifactId>
-  <version>1.3.0</version>
-  <packaging>jar</packaging>
+  <version>1.3.0.NOA</version>
 
   <name>AWS Lambda Java Events Library</name>
   <description>
@@ -18,9 +19,6 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-  <scm>
-    <url>https://github.com/aws/aws-lambda-java-libs.git</url>
-  </scm>
   <developers>
     <developer>
       <name>AWS Lambda team</name>
@@ -31,8 +29,9 @@
 
   <distributionManagement>
     <repository>
-      <id>sonatype-nexus-staging</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <id>bintray-repo-maven-noa</id>
+      <name>bintray-repo-maven-noa</name>
+      <url>https://api.bintray.com/maven/noa-technologies/maven/aws-lambda-java-events/</url>
     </repository>
   </distributionManagement>
 
@@ -40,30 +39,30 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-s3</artifactId>
-      <version>1.11.0</version>
+      <version>1.11.104</version>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-sns</artifactId>
-      <version>1.11.0</version>
+      <version>1.11.104</version>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-cognitoidentity</artifactId>
-      <version>1.11.0</version>
+      <version>1.11.104</version>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-kinesis</artifactId>
-      <version>1.11.0</version>
+      <version>1.11.104</version>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-dynamodb</artifactId>
-      <version>1.11.0</version>
+      <version>1.11.104</version>
     </dependency>
   </dependencies>
-  
+
   <profiles>
     <profile>
       <id>dev</id>
@@ -149,5 +148,5 @@
         </plugins>
       </build>
     </profile>
-  </profiles> 
+  </profiles>
 </project>
